--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           toolchain: 'stable'
           override: true
+      - run: sudo apt-get install -y libsdl2-dev
       - run: cargo test --all-targets
   fmt:
     name: fmt
